examples/test/testpolicy18907.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18907
  namespace: namespace159
spec:
  podSelector:
    matchLabels:
      key13: value17
      key38: value21
      key28: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value13
          key38: value9
          key24: value43
      podSelector:
        matchLabels:
          key33: value21
          key31: value23
